Skip to content

dvdnav blocks opening normal files

dvdnav gets stuck when trying to open some local files with:

vlc file://...

The problem is reproducible with the Qt4 open dialog as well.

Stack trace:

Thread 7 (Thread 0xb3792b70 (LWP 13428)):
[#0](https://code.videolan.org/videolan/vlc/-/issues/0)  0xb7e2bcd1 in write () at ../sysdeps/unix/syscall-template.S:82
[#1](https://code.videolan.org/videolan/vlc/-/issues/1)  0xb7dd5464 in _IO_new_file_write (f=0xb7eb0560, data=0xb378bd30, n=43) at fileops.c:1276
[#2](https://code.videolan.org/videolan/vlc/-/issues/2)  0xb7dd510f in new_do_write (fp=0xb7eb0560, data=0xb378bd30 "libdvdread: Can't seek to block 2034191759\n", to_do=43) at fileops.c:530
[#3](https://code.videolan.org/videolan/vlc/-/issues/3)  0xb7dd53b6 in _IO_new_file_xsputn (f=0xb7eb0560, data=0xb378bd30, n=43) at fileops.c:1370
[#4](https://code.videolan.org/videolan/vlc/-/issues/4)  0xb7db0cd8 in buffered_vfprintf (s=0xb7eb0560, format=<value optimized out>, args=<value optimized out>) at vfprintf.c:2281
[#5](https://code.videolan.org/videolan/vlc/-/issues/5)  0xb7dabe33 in _IO_vfprintf_internal (s=0xb7eb0560, format=0xb7843548 "libdvdread: Can't seek to block %u\n", ap=0xb378e3a8 "\217M?y") at vfprintf.c:1306
[#6](https://code.videolan.org/videolan/vlc/-/issues/6)  0xb7db5f0f in __fprintf (stream=0xb7eb0560, format=0xb7843548 "libdvdread: Can't seek to block %u\n") at fprintf.c:33
[#7](https://code.videolan.org/videolan/vlc/-/issues/7)  0xb782dd4b in UDFReadBlocksRaw () from /usr/lib/libdvdread.so.4
[#8](https://code.videolan.org/videolan/vlc/-/issues/8)  0xb782e8c5 in ?? () from /usr/lib/libdvdread.so.4
[#9](https://code.videolan.org/videolan/vlc/-/issues/9)  0xb7830205 in ?? () from /usr/lib/libdvdread.so.4
[#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0xb783044b in UDFFindFile () from /usr/lib/libdvdread.so.4
[#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0xb782c81c in ?? () from /usr/lib/libdvdread.so.4
[#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0xb782d4ed in DVDOpenFile () from /usr/lib/libdvdread.so.4
[#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0xb7835aaf in ifoOpenVMGI () from /usr/lib/libdvdread.so.4
[#14](https://code.videolan.org/videolan/vlc/-/issues/14) 0xb7855261 in vm_reset () from /usr/lib/libdvdnav.so.4
[#15](https://code.videolan.org/videolan/vlc/-/issues/15) 0xb784c388 in dvdnav_open () from /usr/lib/libdvdnav.so.4
[#16](https://code.videolan.org/videolan/vlc/-/issues/16) 0xb7eda188 in Open (p_this=0x82fbf24) at ../../../modules/access/dvdnav.c:227
[#17](https://code.videolan.org/videolan/vlc/-/issues/17) 0xb7f75266 in generic_start (func=0xb7eda113, ap=0xb3791fd8 "\240\225") at ../../src/modules/modules.c:673
[#18](https://code.videolan.org/videolan/vlc/-/issues/18) 0xb7f768cd in vlc_module_load (p_this=0x82fbf24, psz_capability=0xb7fb457b "access_demux", psz_name=<value optimized out>, b_strict=true, 
    probe=0xb7f75255 <generic_start>) at ../../src/modules/modules.c:591
[#19](https://code.videolan.org/videolan/vlc/-/issues/19) 0xb7f76e36 in module_need (obj=0x82fbf24, cap=0xb7fb457b "access_demux", name=0x8195630 "file", strict=true) at ../../src/modules/modules.c:688
[#20](https://code.videolan.org/videolan/vlc/-/issues/20) 0xb7f27cad in __demux_New (p_obj=0x82ee5dc, p_parent_input=0x82ee5dc, psz_access=0x82fbe30 "file", psz_demux=0xb7fbda92 "", 
    psz_location=0x82fbe37 "/home/remi/ogg/Musical/Leonard%20Bernstein/West%20Side%20Story/Leonard%20Bernstein%20-%2001%20Overture.ogg", s=0x0, 
    out=0x82fbc28, b_quick=false) at ../../src/input/demux.c:199
[#21](https://code.videolan.org/videolan/vlc/-/issues/21) 0xb7f35d9f in InputSourceInit (p_input=0x82ee5dc, in=0x810a650, 
    psz_mrl=0x80e95a8 "file:///home/remi/ogg/Musical/Leonard%20Bernstein/West%20Side%20Story/Leonard%20Bernstein%20-%2001%20Overture.ogg", 
    psz_forced_demux=0xb7fbda92 "", b_in_can_fail=false) at ../../src/input/input.c:2388
[#22](https://code.videolan.org/videolan/vlc/-/issues/22) 0xb7f37664 in Init (p_input=0x82ee5dc) at ../../src/input/input.c:1244
[#23](https://code.videolan.org/videolan/vlc/-/issues/23) 0xb7f3bf17 in Run (p_this=0x82ee5dc) at ../../src/input/input.c:539
[#24](https://code.videolan.org/videolan/vlc/-/issues/24) 0xb7f7c016 in thread_entry (data=0x82fbac0) at ../../src/misc/threads.c:58
[#25](https://code.videolan.org/videolan/vlc/-/issues/25) 0xb7ebd944 in start_thread (arg=0xb3792b70) at pthread_create.c:304
[#26](https://code.videolan.org/videolan/vlc/-/issues/26) 0xb7e3ad0e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

As a result, VLC gets stuck and the file cannot be opened.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information