dvdnav: only try to regular files matching *.iso (fix #4741)

(This does not affect directories and block devices.)
(cherry picked from commit 5699c34a510ae92568b903360e57ac0942fd3dcf)

Conflicts:

	modules/access/dvdnav.c